<resources>
    <string name="app_name">Localisation de groupe</string>
    <string name="label_nom_ma_position">Ma position :</string>
    <string name="texte_label_nom_altitude">Altitude :</string>
    <string name="label_nom_angle_minutes_secondes">En angle/minutes/secondes</string>
    <string name="label_nom_latitude">Latitude :</string>
    <string name="label_nom_longitude">Longitude :</string>
    <string name="item_menu_actualiser">Rafraîchir</string>
    <string name="item_menu_autorisations">Redemander autorisations</string>
    <string name="item_menu_reinitialiser_positions">Réinitialiser les positions</string>
    <string name="item_menu_synchroniser_heure">Synchroniser heure serveur</string>
    <string name="item_menu_infos_debug">Infos debug</string>
    <string name="item_menu_a_propos">A propos</string>
    <string name="titre_dialogue_a_propos">A propos...</string>
    <string name="item_menu_quitter">Quitter</string>

    <string name="indication_position_dans_liste_utilisateurs">%1$dN, %2$dE</string>

    <string name="label_nom">Nom :</string>
    <string name="label_diffuser_ma_position">Diffuser ma position</string>
    <string name="switch_diffuser_ma_position">Commutateur \"Diffuser ma position\"</string>
    <string name="label_intervalle_mesure">Intervalle entre mesures de position (s) :</string>
    <string name="label_intervalle_maj">Intervalle m.a.j. position (s) :</string>
    <string name="indice_nom_a_diffuser">Nom à diffuser</string>
    <string name="intervalle_entre_deux_mises_jour_de_l_affichage">Intervalle entre deux mises à jour de l\'affichage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="texte_tab1">Position</string>
    <string name="texte_tab2">Carte</string>
    <string name="texte_tab3">Infos</string>
    <string name="texte_tab4">Params</string>
    <string name="description_intervalle__mesures">Intervalle de temps entre deux mesures (s)</string>
    <string name="decription_switch_diffuser_ma_position">Diffuser ou non ma position (switch)</string>
    <string name="decription_switch_diffuser_en_fond">Diffuser ou non en tâche de fond</string>
    <string name="switch_diffuser_en_fond">Diffuser en tâche de fond</string>
    <string name="intervalle_maj_serveur">Intervalle diffusion en tâche de fond (s)</string>
    <string name="description_label_nom">Nom</string>
    <string name="label_nom_serveur">Adresse (nom) du serveur :</string>
    <string name="label_port_serveur">Port du serveur :</string>
    <string name="centrer_sur_moi">Centrer sur moi</string>
    <string name="information">Information</string>
    <string name="LocationUpdateService">LocationUpdateService</string>
    <string name="service_demarre">Service démarré</string>
    <string name="description_intervalle_maj">Intervalle de temps entre deux mises à jour de la position sur le serveur</string>
    <string name="description_champ_adresse_serveur">Adresse du serveur</string>
    <string name="msg_no_port_invalide">Le numéro de port doit être entre 0 et 65535 !</string>
    <string name="msg_position_copiee">Position copiée dans le presse-papier !</string>
    <string name="chaine_affichage_coordonnees_GPS">%1$fN, %2$fE</string>
    <string name="texte_bouton_info">Appui court -> centrer la carte sur la personne\nAppui long -> menu contextuel</string>
    <string name="titre_notif_service">Suivi GPS en arrière plan</string>
    <string name="texte_notif_date_dernier_envoi">Dernier envoi réussi :</string>
    <string name="centrer_la_carte_sur">Centrer la carte sur..</string>
    <string name="ouvrir_dans_app_externe">Ouvrir dans app externe</string>
    <string name="rentrer_les_coordonnees">Rentrer les coordonnées</string>
    <string name="supprimer">Supprimer</string>
    <string name="titre_saisie_coordonnees_GPS">Nouvelles coordonnées pour %1$s</string>
    <string name="legende_saisie_coordonnees_GPS">Coordonnées GPS sous forme décimale séparées par une virgule avec ou sans indications N,S,E,W</string>
    <string name="label_saisie_coordonnees_GPS">Coordonnées GPS :</string>
    <string name="hint_saisie_coordonnees_GPS">43.123456,2.123456</string>
    <string name="dialog_OK">Ok</string>
    <string name="dialog_annuler">Annuler</string>
    <string name="msg_coordonnes_rentrees_invalides">Les coordonnées proposées sont invalides !\nAucun changement n\'a été effectué.</string>
    <string name="msg_suppression_position_nom">%1$s a été supprimé de la liste des positions suivies.</string>
    <string-array name="case_a_cocher_suppression_serveur">
        <item>Supprimer également sur le serveur</item>
    </string-array>
    <string name="confirmation_effacer_positions">Sûr d\'effacer toutes les positions ?</string>
    <string name="msg_ecart_temps_important">Ecart important entre l\'horloge du serveur et l\'horloge locale. La précision du programme en sera impactée.</string>
    <string name="titre_ecart_temps_trop_grand">Problème avec la date et l\'heure</string>
    <string name="msg_ecart_temps_trop_grand">Il y a un trop grand écart (%1$d s) entre l\'horloge du serveur et l\'horloge locale. Le programme ne fonctionnera pas correctement tant que le problème ne sera pas réglé. Corrigez-le et demandez à nouveau une synchronisation de l\'heure via le menu.</string>
    <string name="toutes_autorisations_accordees">Toutes les permission nécessaires sont accordées !</string>
    <string name="liste_permissions_manquantes">Permissions manquantes : %1$s</string>
    <string name="titre_requete_autorisation">Autorisation manquante</string>
    <string name="msg_autorisation_notification_neccessaire">L\'autorisation de notification est nécessaire pour que la diffusion de la position en tâche de fond reste active sur la durée.</string>
    <string name="msg_autorisation_notification_non_accordee">La diffusion de la position en fond ne fonctionnera pas correctement car pas de notifications</string>
</resources>