<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_menu_actualiser"
        android:title="@string/item_menu_actualiser"
        android:icon="@drawable/icone_actualiser"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/item_menu_redemander_autorisations"
        android:title="@string/item_menu_autorisations" />
    <item
        android:id="@+id/item_menu_reinitialiser_positions"
        android:title="@string/item_menu_reinitialiser_positions" />
    <item
        android:id="@+id/item_menu_a_propos"
        android:title="@string/item_menu_a_propos" />
    <item
        android:id="@+id/item_menu_quitter"
        android:title="@string/item_menu_quitter" />
</menu>