<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Layout_contenu_parametres"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/label_nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/description_label_nom"
            android:text="@string/label_nom"
            app:layout_constraintBottom_toBottomOf="@+id/zone_saisie_nom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/zone_saisie_nom" />

        <EditText
            android:id="@+id/zone_saisie_nom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="Nom à diffuser"
            android:ems="10"
            android:inputType="textNoSuggestions|textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_nom"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_diffuser_ma_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:checked="true"
            android:contentDescription="@string/decription_switch_diffuser_ma_position"
            android:minHeight="48dp"
            android:text="@string/label_diffuser_ma_position"
            app:layout_constraintStart_toStartOf="@+id/label_nom"
            app:layout_constraintTop_toBottomOf="@+id/zone_saisie_nom" />

        <TextView
            android:id="@+id/label_intervalle_mesure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/description_intervalle__mesures"
            android:text="@string/label_intervalle_mesure"
            app:layout_constraintStart_toStartOf="@+id/switch_diffuser_ma_position"
            app:layout_constraintTop_toBottomOf="@+id/switch_diffuser_ma_position" />

        <EditText
            android:id="@+id/champ_intervalle_mesure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="5"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/label_intervalle_mesure"
            app:layout_constraintTop_toBottomOf="@+id/label_intervalle_mesure" />

        <TextView
            android:id="@+id/label_intervalle_maj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/intervalle_entre_deux_mises_jour_de_l_affichage"
            android:text="@string/label_intervalle_maj"
            app:layout_constraintStart_toStartOf="@+id/label_intervalle_mesure"
            app:layout_constraintTop_toBottomOf="@+id/champ_intervalle_mesure" />

        <EditText
            android:id="@+id/champ_intervalle_maj"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="10"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/label_intervalle_maj"
            app:layout_constraintTop_toBottomOf="@+id/label_intervalle_maj" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barre_separation_serveur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:barrierDirection="top"
            app:constraint_referenced_ids="label_nom_serveur"
            app:layout_constraintTop_toBottomOf="@+id/champ_intervalle_maj" />

        <TextView
            android:id="@+id/label_nom_serveur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_nom_serveur"
            app:layout_constraintStart_toStartOf="@+id/label_nom"
            app:layout_constraintTop_toBottomOf="@+id/barre_separation_serveur" />

        <EditText
            android:id="@+id/champ_adresse_serveur"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="FQN ou IP"
            android:ems="10"
            android:inputType="textUri"
            app:layout_constraintEnd_toStartOf="@+id/indicateur_connexion_serveur"
            app:layout_constraintStart_toStartOf="@+id/label_nom_serveur"
            app:layout_constraintTop_toBottomOf="@+id/label_nom_serveur" />

        <TextView
            android:id="@+id/label_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_port_serveur"
            app:layout_constraintStart_toStartOf="@+id/label_nom"
            app:layout_constraintTop_toBottomOf="@+id/champ_adresse_serveur" />

        <EditText
            android:id="@+id/champ_port_serveur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:autofillHints="7777"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/label_port"
            app:layout_constraintStart_toEndOf="@+id/label_port"
            app:layout_constraintTop_toTopOf="@+id/label_port" />

        <ImageButton
            android:id="@+id/indicateur_connexion_serveur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/champ_adresse_serveur"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/serveur_injoignable" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>