<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label_saisie_coordonnees_GPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_saisie_coordonnees_GPS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/saisie_coordonnees_GPS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:hint="@string/hint_saisie_coordonnees_GPS"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/label_saisie_coordonnees_GPS"
        app:layout_constraintTop_toBottomOf="@id/label_saisie_coordonnees_GPS" />

    <TextView
        android:id="@+id/label_legende_coordonnees_GPS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/legende_saisie_coordonnees_GPS"
        app:layout_constraintEnd_toEndOf="@+id/saisie_coordonnees_GPS"
        app:layout_constraintStart_toStartOf="@+id/saisie_coordonnees_GPS"
        app:layout_constraintTop_toBottomOf="@+id/saisie_coordonnees_GPS" />
</androidx.constraintlayout.widget.ConstraintLayout>